tests/negative/array/array_multi_dim_nested.tx
// EXPECTED: COMPILE_ERROR
// Description: Test multi-dimensional array nested type mismatch.

function main() {
    let matrix: int[][] = [
        [1, 2],
        [3, "4"] // Error: string in int[]
    ];
}
